--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,24 +1,109 @@
 .header {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    
-    height: 4em;
-    font-weight: 300;
+    position: fixed;
+    width: 100vw;
+    z-index: 1;
     background-color: white;
 
-    &__img {
+    &__content {
+        justify-content: space-between;
+        display: flex;
+        align-items: center;
+        gap: 1em;
+        
+        width: 80%;
+        height: 4em;
+        margin: auto;
+        font-weight: 300;
+        background-color: white;
+    }
+
+    &__logo {
         width: 139px;
         height: 20px;
     }
 
     &__nav {
         display: flex;
+        align-items: center;
         gap: 20px;
-        font-size: min(16px, 2.5vw);
-
+        font-size: 16px;
+        
         a {
             color: $textColor;
+
+            &:hover {
+                border-bottom: 3px solid transparent;
+                border-image: linear-gradient(to right, $primaryColor, $secondaryColor);
+                border-image-slice: 1;
+
+                color: black;
+                padding-bottom: 1.2em;
+                padding-top: 1.2em;
+            }
+        }
+    }
+
+    &__hamburger {
+        display: none;
+    }
+
+    &__fade {
+        display: block;
+        position: fixed;
+        z-index: 1;
+        width: 100%;
+        height: 100%;
+        border: none;
+        background-color: rgba(0, 0, 0, 0.5);
+
+        transition: 0.2s;
+            left: 0;
+
+        &--hidden {
+            left: 100%;
+        }
+    }
+    
+    &__modal {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 12px;
+
+        z-index: 2;
+        width: 90%;
+        height: 14em;
+        margin: auto;
+        margin-top: 1em;
+        border: none;
+        border-radius: 6px;
+        box-shadow: 0px 0px 50px rgba(0, 0, 0, 0.5);
+        background-color: $primaryBgColor;
+
+        a {
+            color: $tertiaryColor;
+        }
+    }
+}
+
+@media screen and (max-width: 700px) {
+    .header {
+
+        &__button {
+            display: none;
+        }
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .header {
+        &__nav {
+            display: none;
+        }
+
+        &__hamburger {
+            display: block; 
         }
     }
 }
