--- a/scss/main.scss
+++ b/scss/main.scss
@@ -6,18 +6,21 @@
     box-sizing: border-box;
     text-decoration: none;
     font-family: "Public Sans";
+    line-height: 1.5em;
 }
 
 $primaryColor: hsl(136, 65%, 51%);
-$secondaryColor: hsl(192, 70%, 51%);
+$secondaryColor: hsl(192, 100%, 61%);
 $tertiaryColor: hsl(233, 26%, 24%);
-
 $textColor: hsl(233, 8%, 62%);
-
 $primaryBgColor: hsl(0, 0%, 98%);
 $secondaryBgColor: hsl(220, 16%, 96%);
 
 @import "button";
+@import "card";
+@import "article";
 @import "header";
 @import "section1";
 @import "section2";
+@import "section3";
+@import "footer";
