--- a/scss/main.scss
+++ b/scss/main.scss
@@ -19,6 +19,7 @@ $secondaryBgColor: hsl(220, 16%, 96%);
 @import "button";
 @import "card";
 @import "article";
+@import "modal";
 @import "header";
 @import "section1";
 @import "section2";
