--- a/css/main.css
+++ b/css/main.css
@@ -45,7 +45,7 @@
   height: 11em;
   border-radius: 6px 6px 0px 0px;
 }
-.article div {
+.article__textContent {
   width: 90%;
   margin: auto;
 }
@@ -65,6 +65,46 @@
   margin-top: 0.8em;
   font-size: 14px;
   color: hsl(233, 8%, 62%);
+}
+.article:hover {
+  cursor: pointer;
+}
+.article:hover .article__title {
+  color: hsl(192, 100%, 61%);
+}
+
+.modal {
+  display: block;
+  position: fixed;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+  border: none;
+  background-color: rgba(0, 0, 0, 0.5);
+  transition: 0.2s;
+  left: 0;
+}
+.modal--hidden {
+  left: 100%;
+}
+.modal__content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 12px;
+  z-index: 2;
+  width: 90%;
+  height: 14em;
+  margin: auto;
+  margin-top: 1em;
+  border: none;
+  border-radius: 6px;
+  box-shadow: 0px 0px 50px rgba(0, 0, 0, 0.5);
+  background-color: hsl(0, 0%, 98%);
+}
+.modal__content a {
+  color: hsl(233, 26%, 24%);
 }
 
 .header {
@@ -107,39 +147,6 @@
 }
 .header__hamburger {
   display: none;
-}
-.header__fade {
-  display: block;
-  position: fixed;
-  z-index: 1;
-  width: 100%;
-  height: 100%;
-  border: none;
-  background-color: rgba(0, 0, 0, 0.5);
-  transition: 0.2s;
-  left: 0;
-}
-.header__fade--hidden {
-  left: 100%;
-}
-.header__modal {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  gap: 12px;
-  z-index: 2;
-  width: 90%;
-  height: 14em;
-  margin: auto;
-  margin-top: 1em;
-  border: none;
-  border-radius: 6px;
-  box-shadow: 0px 0px 50px rgba(0, 0, 0, 0.5);
-  background-color: hsl(0, 0%, 98%);
-}
-.header__modal a {
-  color: hsl(233, 26%, 24%);
 }
 
 @media screen and (max-width: 700px) {
@@ -184,8 +191,8 @@
   position: relative;
   width: 155%;
   height: fit-content;
-  margin-top: -35%;
-  top: -10%;
+  margin-top: -20%;
+  top: -8%;
   left: -4%;
 }
 .section1__bgImage {
@@ -217,7 +224,7 @@
   .section1__imageDiv {
     width: 150%;
     height: initial;
-    margin: -45% 0 0 -14.5%;
+    margin: -35% 0 0 -14.5%;
   }
 }
 .section2 {
